app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jsp-counter-deployment
  namespace: hello-tekton
  labels:
    app: jsp-counter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jsp-counter
      server: tomcat
  template:
    metadata:
      labels:
        app: jsp-counter
        server: tomcat
    spec:
      serviceAccountName: jsp-counter-sa
      containers:
      - name: tomcat
        image: image-registry.openshift-image-registry.svc:5000/hello-tekton/tomcat9-jsp-counter
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /jsp-counter/health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /jsp-counter/health
            port: 8080
          initialDelaySeconds: 60
---
kind: Service
apiVersion: v1
metadata:
  name: jsp-counter-service
  #namespace: jsp-counter-ns
spec:
  selector:
    app: jsp-counter
    server: tomcat
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Route
metadata:
  name: jsp-counter-route
  labels:
    app: jsp-counter
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: jsp-counter-service
